<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">누구누구</string>
    <string name="nav_header_subtitle">20202020</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">스마일리지 홈</string> <!--  홈 화면 이름  -->
    <string name="menu_gallery">커뮤니티</string>
    <string name="menu_slideshow">FAQ</string>
    <string name="menu_new_activity">새로운</string>
    <string name="menu_new_activity2">아이즈원</string>
    <string name="menu_db_connect">앚즈</string>
</resources>