<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_new"
        android:name="com.example.myapplication.ui.new1.NewActivityFragment"
        android:label="@string/menu_new_activity"
        tools:layout="@layout/fragment_new_activity"/>

    <fragment
        android:id="@+id/nav_new2"
        android:name="com.example.myapplication.ui.new2.NewActivity2Fragment"
        android:label="@string/menu_new_activity2"
        tools:layout="@layout/fragment_new_activity2"/>

    <fragment
        android:id="@+id/db_connect"
        android:name="com.example.myapplication.ui.Db_connect.DbConnectFragment"
        android:label="@string/menu_db_connect"
        tools:layout="@layout/fragment_bb_connect"/>
</navigation>